--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,39 @@
+*{
+  font-size: 20px;
+}
+
 .App {
+  margin-top: 30px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  width: 80%;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.grid{
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #f5f5f5;
+  height: 200px;
+}
+
+input{
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  width:300px;
+  border:none;
+  outline: none;
+  border-bottom:1px solid #757575;
+}
+
+button{
+  height: 40px;
+  border-radius: 5px;
+  outline: none;
+  background-color: #757575;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
